# django-template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/project/: manage.py
src/project/conf/: asgi.py  settings.py  urls.py  wsgi.py
